fix overflow on landing

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -22,6 +22,8 @@
       display: flex;
       padding: 0 5%;
       flex-direction: column;
+      overflow: hidden;
+      align-items: center;
       justify-content: center;
       position: absolute;
       width: 100%;
@@ -40,6 +42,7 @@
 
       h1 {
         font-size: 2.5rem;
+        text-align: center;
 
         @media screen and (max-width: $small) {
           font-size: 2rem;
@@ -50,6 +53,7 @@
       }
       h2 {
         font-size: 1.5rem;
+        text-align: center;
         font-weight: 100;
         padding: 1rem 0;
 
@@ -78,7 +82,7 @@
 
         button {
           border: none;
-          padding: 1.5rem 2rem;
+          padding: 1.2rem 2rem;
           width: 100%;
           font-size: 1.1rem;
           cursor: pointer;
@@ -88,6 +92,7 @@
           color: white;
 
           @media screen and (min-width: $medium) {
+            padding: 1.5rem 2rem;
             width: 20%;
             margin: 0;
           }
@@ -98,11 +103,12 @@
         }
 
         input {
-          padding: 1.6rem 2rem;
+          padding: 1.2rem 2rem;
           width: 100%;
 
           @media screen and (min-width: $medium) {
             width: 35%;
+            padding: 1.6rem 2rem;
           }
 
           &:focus {
